--- a/02-api/src/templates/driver.hbs
+++ b/02-api/src/templates/driver.hbs
@@ -1,8 +1,8 @@
 <h1>{{driver.givenName}} {{driver.familyName}}</h1>
 
 <ul>
-    <li>{{driver.nationality}}</li>
-    <li>{{driver.dateOfBirth}}</li>
+    <li><b>Nationality:</b> {{driver.nationality}}</li>
+    <li><b>Birthday:</b> {{driver.dateOfBirth}}</li>
     <li><a href="{{driver.url}}">Wiki</a></li>
-    <li><a href="/constructors/{{constructor.constructorId}}">{{constructor.name}}</a></li>
+    <li><b>Last Constructor:</b> <a href="/constructors/{{constructor.constructorId}}">{{constructor.name}}</a></li>
 </ul>
