added date helper, driver Partial and api module for the requests

--- a/02-api/src/templates/driver.hbs
+++ b/02-api/src/templates/driver.hbs
@@ -2,7 +2,7 @@
 
 <ul>
     <li><b>Nationality:</b> {{driver.nationality}}</li>
-    <li><b>Birthday:</b> {{driver.dateOfBirth}}</li>
+    <li><b>Birthday:</b> {{date driver.dateOfBirth}}</li>
     <li><a href="{{driver.url}}">Wiki</a></li>
     <li><b>Last Constructor:</b> <a href="/constructors/{{constructor.constructorId}}">{{constructor.name}}</a></li>
 </ul>
