--- a/02-api/src/partials/driverTable.hbs
+++ b/02-api/src/partials/driverTable.hbs
@@ -5,6 +5,7 @@
         <th>Last Name</th>
         <th>Nationality</th>
         <th>Birthday</th>
+        {{#if lastConstructor}}<th>Last Constructor</th>{{/if}}
         <th>Wikipedia</th>
     </tr>
     </thead>
@@ -15,6 +16,7 @@
             <td><a href="/drivers/{{driverId}}">{{familyName}}</a></td>
             <td>{{nationality}}</td>
             <td>{{date dateOfBirth}}</td>
+            {{#if lastConstructor}}<td>{{lastConstructor}}</td>{{/if}}
             <td><a href="{{url}}">Wiki</a></td>
         </tr>
     {{/each}}
