added loading image

--- a/04-d3/src/templates/diagram.hbs
+++ b/04-d3/src/templates/diagram.hbs
@@ -1,2 +1,6 @@
 <h1>Diagram</h1>
 
+{{#if isLoading}}
+  <p>Loading .... </p>
+  <img src="https://tagebucheinesdeutschen.files.wordpress.com/2016/08/homer-affe.gif?w=614" />
+{{/if}}
